--- a/src/app/css/style.less
+++ b/src/app/css/style.less
@@ -7,3 +7,18 @@
 .ui.menu .ui.dropdown.item .menu .item {
   color: black;
 }
+
+.ui.cards {
+  display: block;
+  columns: 300px auto;
+  column-gap: 2em;
+
+  & > .ui.card {
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
+    width: 100%;
+    display: block;
+    margin: 1em 0;
+  }
+}
