--- a/src/app/css/style.less
+++ b/src/app/css/style.less
@@ -1,4 +1,5 @@
-@import './semantic/semantic.less';
+// @import './semantic/semantic.less';
+@import 'https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css';
 
 .text.large > * {
   font-size: 1.33em !important;
