feat(Header,Footer): Randomly generated, dynamic image

--- a/src/app/css/style.less
+++ b/src/app/css/style.less
@@ -12,3 +12,31 @@
     color: inherit;
   }
 }
+
+.ui.segment.vertical.main-header {
+  padding-bottom: 1em;
+
+  .ui.header {
+    margin: 3em 0em;
+    padding: 1em 0;
+    background: rgba(0, 0, 0, 0.6);
+  }
+}
+
+.ui.segment.vertical.main-footer {
+  padding: 5em 0;
+
+  .container {
+    padding: 1em;
+    background: rgba(0, 0, 0, 0.6);
+  }
+}
+
+.ui.segment.vertical.main-header, .ui.segment.vertical.main-footer {
+  background-color: #1b1c1d;
+  background-image: url('/api/public/header-image');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
