chore(deps): everything but sequelize@5 and webpack@4

--- a/src/app/css/style.less
+++ b/src/app/css/style.less
@@ -1,4 +1,4 @@
-@import './semantic/semantic.less';
+@import '~semantic-ui-less/semantic.less';
 // @import 'https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css';
 
 .text.large > * {
