switch api url (public only)

--- a/src/app/css/style.less
+++ b/src/app/css/style.less
@@ -34,7 +34,7 @@
 
 .ui.segment.vertical.main-header, .ui.segment.vertical.main-footer {
   background-color: #1b1c1d;
-  background-image: url('/api/public/header-image');
+  background-image: url('https://beta.volunteeringpeel.org/api/v2/header/random');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
